--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: minecraft-server
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       app: minecraft-server
@@ -15,6 +15,10 @@ spec:
       labels:
         app: minecraft-server
     spec:
+      volumes:
+      - name: minecraft-server-pv
+        persistentVolumeClaim:
+          claimName: minecraft-server-nfs-pvc
       containers:
       - name: minecraft-server
         image: itzg/minecraft-server:latest
@@ -39,6 +43,9 @@ spec:
         ports:
         - containerPort: 25565
           name: minecraft
+        volumeMounts:
+        - mountPath: "/data"
+          name: minecraft-server-pv
         readinessProbe:
           exec:
             command:
@@ -55,3 +62,34 @@ spec:
             - ping
           initialDelaySeconds: 30
           periodSeconds: 30
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: minecraft-server-nfs-pv
+spec:
+  capacity:
+    storage: 5Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Recycle
+  storageClassName: nfs
+  mountOptions:
+    - hard
+    - nfsvers=4.1
+  nfs:
+    path: /tank/Sonstiges/Docker/minecraft
+    server: 192.168.178.10
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: minecraft-server-nfs-pvc
+spec:
+  storageClassName: nfs
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 5Gi
