--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -25,8 +25,10 @@ spec:
         resources:
           limits:
             memory: 2Gi
+            cpu: 2
           requests:
             memory: 1.5Gi
+            cpu: 500m
         env:
           - name:  EULA
             value: 'TRUE'
