--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         resources:
           limits:
             memory: 2Gi
-            cpu: 2
+            cpu: 500m
           requests:
             memory: 1.5Gi
             cpu: 500m
