--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -73,7 +73,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   mountOptions:
     - hard
     - nfsvers=4.1
