--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           claimName: minecraft-server-nfs-pvc
       containers:
       - name: minecraft-server
-        image: itzg/minecraft-server:latest
+        image: itzg/minecraft-server:java17
         resources:
           limits:
             memory: 2Gi
