--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -33,7 +33,7 @@ spec:
           - name: MODE
             value: creative
           - name: MOTD
-            value: My super-cool minecraft server in k3s
+            value: My super-cool minecraft server in kubernetes
           - name: ALLOW_FLIGHT
             value: 'TRUE'
           - name: OPS
