--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -1,4 +1,3 @@
-# docker run -d -it -v /path/on/host:/data -e EULA=TRUE -p 25565:25565 --name mc itzg/minecraft-server
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -55,3 +54,10 @@ spec:
             - ping
           initialDelaySeconds: 30
           periodSeconds: 30
+        volumeMounts:
+        - name: my-volume
+          mountPath: /data
+      volumes:
+      - name: my-volume
+        persistentVolumeClaim:
+          claimName: my-pvc
