--- a/minecraft-deployment.yaml
+++ b/minecraft-deployment.yaml
@@ -60,4 +60,4 @@ spec:
       volumes:
       - name: my-volume
         persistentVolumeClaim:
-          claimName: my-pvc
+          claimName: ceph-pvc
